<resources>
    <string name="app_name">Cardle</string>
    <string name="deck_name">Deck Name</string>
    <string name="button_desc_create">Create</string>
    <string name="button_desc_course">Course</string>
    <string name="button_desc_calendar">Calendar</string>
    <string name="button_desc_settings">Settings</string>
    <string name="deck">Deck</string>
    <string name="add">Add</string>
    <string name="del">Delete</string>
    <string name="new_card">New card</string>
    <string name="question">Question</string>
    <string name="response">Response</string>
    <string name="id_card">ID Card</string>
    <string name="label_card">Card creating :</string>
    <string name="number_card">Card number</string>
    <string name="desc_progress_bar">goal achievement</string>
    <string name="deck_dialog">Do you want to delete the deck ?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="course_info">Course training</string>
    <string name="tap_here">Tap here to see the response</string>
    <string name="good_response">Good response</string>
    <string name="bad_response">Bad response</string>
</resources>