<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/textViewSetQuestion"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:hint="@string/question"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/textViewSetResponse"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:hint="@string/response"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/buttonAddCard"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button_validate"
        android:contentDescription="@string/add" />

</LinearLayout>