<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerCards"
        android:layout_width="379dp"
        android:layout_height="341dp" />

    <Button
        android:id="@+id/buttonDelDeck"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button_delete"
        android:contentDescription="@string/del" />

    <EditText
        android:id="@+id/textViewSetDeck"
        android:layout_width="211dp"
        android:layout_height="69dp"
        android:layout_marginBottom="151dp"
        android:gravity="center"
        android:hint="@string/deck_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/buttonAddDeck"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button_validate"
        android:contentDescription="@string/add"/>

</LinearLayout>