<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/dialogInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/deck_dialog"
        android:textColor="#0277BD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_refuse"
            android:contentDescription="@string/button_no"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_validate"
            android:contentDescription="@string/button_yes"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>