<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpagerCard"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/buttonAddCardDeck"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_create"
            android:contentDescription="@string/add"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/buttonDelCardDeck"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_delete"
            android:contentDescription="@string/del"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <EditText
        android:id="@+id/textViewSetDeck"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:hint="@string/deck_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/buttonAddDeck"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button_validate"
        android:contentDescription="@string/add" />

</LinearLayout>